[gd_scene load_steps=7 format=2]

[ext_resource path="res://livroBiblioteca.png" type="Texture" id=1]
[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://livro.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0.643137, 0.345098, 0.345098, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 46
font_data = ExtResource( 3 )

[node name="MatematicaFinanceira" type="Node2D"]
position = Vector2( -21, -32 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="livro" type="Sprite" parent="CanvasLayer"]
position = Vector2( 320.75, 183.75 )
scale = Vector2( 0.345052, 0.325463 )
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="pagina1" type="Label" parent="CanvasLayer/livro"]
margin_left = -805.0
margin_top = -494.0
margin_right = 22.0
margin_bottom = 509.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "\"É uma dos passos mais importantes para ter noção do impacto do tempo no valor do dinheiro.\" ,
\"Exemplo: Caso você gaste 20 tendo o patrimônio de 1000, você gastou 2% do seu patrimônio. Caso o gasto seja de 2 moedas ao invés de 20, este gasto se equivale a 0,2% do seu patrimônio, porém, caso o seu patrimônio aumente para 1500, o gasto de 2 moedas passa a ser equivalente em 0,13%\""
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pagina2" type="Label" parent="CanvasLayer/livro"]
margin_left = 113.374
margin_top = -502.857
margin_right = 815.374
margin_bottom = 500.143
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/livro"]
margin_left = 620.45
margin_top = 446.087
margin_right = 841.45
margin_bottom = 504.087
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Próxima Página"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer/livro"]
margin_left = -800.0
margin_top = 446.087
margin_right = -579.0
margin_bottom = 504.087
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Voltar Página"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/livro"]

[node name="VoltarBiblioteca" type="Button" parent="CanvasLayer/livro"]
anchor_left = 0.668
anchor_top = 0.43
anchor_right = 0.8
anchor_bottom = 0.5
margin_left = -960.145
margin_top = -540.445
margin_right = -960.585
margin_bottom = -535.046
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "VOLTAR"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/livro/Button" to="CanvasLayer/livro" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/livro/Button2" to="CanvasLayer/livro" method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/livro/VoltarBiblioteca" to="CanvasLayer/livro" method="_on_VoltarBiblioteca_pressed"]
